k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashapp-service
  # `minikube service dashapp-service` to go to the service
spec:
  selector:
    app: dashapp
  ports:
    - protocol: TCP
      port: 8050
      targetPort: 8050
  type: LoadBalancer
