k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  # minikube addons enable ingress
  # add `minikube ip` in /etc/hosts
  - host: dashapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashapp-service
            port:
              number: 8050
